spotify and twitter working OMDB maybe

--- a/.env
+++ b/.env
@@ -1,11 +1,15 @@
+
 # Spotify API keys
 
-SPOTIFY_ID=your-spotify-id
-SPOTIFY_SECRET=your-spotify-secret
+SPOTIFY_ID=60e308f9c7fd41a2ab2c589ac7fbf4dc
+SPOTIFY_SECRET=6329b37c18b8419cad7a1af5b325e365
 
 # Twitter API keys
 
-TWITTER_CONSUMER_KEY=your-twitter-consumer-key
-TWITTER_CONSUMER_SECRET=your-twitter-consumer-secret
-TWITTER_ACCESS_TOKEN_KEY=your-access-token-key
-TWITTER_ACCESS_TOKEN_SECRET=your-twitter-access-token-secret
+TWITTER_CONSUMER_KEY=EATwHwIGGTIg5yhmvoHiJzckw
+TWITTER_CONSUMER_SECRET=OLd1xfitMIJ6lt6dhhVjcwmI3E6wQhqgBOt0ZYCBxgUvdfW3tQ
+TWITTER_ACCESS_TOKEN_KEY=985996489481531392-FO5OohbUfizSChjx9GA5bNiFLzPggkB
+TWITTER_ACCESS_TOKEN_SECRET=nqv0w7qzGPEisBV6hA8CftAA3A103zlwgbI5XBa2QeGTN
+
+# OMDB keys
+OMDB_API=http://www.omdbapi.com/?i=tt3896198&apikey=2f84b887
